docs: update all documentation for v0.4.0
- docs/README.md: add flame graph, CLI, OTLP, Prometheus to overview
- docs/configuration.md: add OTLP export, Prometheus, CLI config sections
- docs/architecture.md: add argus-cli, argus-frontend modules, 10 analyzers,
  new endpoints, FlameGraphAnalyzer, OTLP exporter, design decisions
- docs/getting-started.md: update install options (one-line install),
  add CLI usage, flame graph, OTLP quick start
- docs/troubleshooting.md: add CLI, flame graph, OTLP troubleshooting

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>